<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/common_topbar_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/address"
            android:textSize="@dimen/text_size_normal"
            android:gravity="center"/>

        <EditText
            android:id="@+id/addr_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <ImageView
            android:id="@+id/get_addr_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/locate_48"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/new_code"
            android:textSize="@dimen/text_size_normal"
            android:gravity="center"/>

        <EditText
            android:id="@+id/new_code_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <ImageView
            android:id="@+id/get_new_code_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/locate_48"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/old_code"
            android:textSize="@dimen/text_size_normal"
            android:gravity="center"/>

        <EditText
            android:id="@+id/old_code_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <ImageView
            android:id="@+id/get_old_code_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/locate_48"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/new_reading"
            android:textSize="@dimen/text_size_normal"
            android:gravity="center"/>

        <EditText
            android:id="@+id/new_reading_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <ImageView
            android:id="@+id/get_new_reading_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/locate_48"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/old_reading"
            android:textSize="@dimen/text_size_normal"
            android:gravity="center"/>

        <EditText
            android:id="@+id/old_reading_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <ImageView
            android:id="@+id/get_old_reading_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/locate_48"/>
    </LinearLayout>

    <Button
        android:id="@+id/add_install_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

</LinearLayout>